Modify vertical align of icons in buttons, repair some texts in breakout game.

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
+    --fs-btn: .8rem;
 }
 
 @media (min-width: 800px) {
@@ -89,10 +90,33 @@ h3 {
     color: var(--clr-dark);
     text-decoration: none;
     cursor: pointer;
-    font-size: .8rem;
+    font-size: var(--fs-btn);
     text-transform: uppercase;
     letter-spacing: 2px;
     transition: transform 200ms ease-in-out;
+}
+
+i {
+    font-size: var(--fs-btn);
+    padding-right: 1em;
+}
+
+.fa-trophy {
+    vertical-align: -6%;
+}
+
+.fa-github,
+.fa-envelope {
+    vertical-align: -5%;
+}
+
+.fa-desktop,
+.fa-download {
+    vertical-align: -10%;
+}
+
+.fa-external-link {
+    vertical-align: -15%;
 }
 
 .btn:hover {
